Small changes to fix warnings.